# foo_input_asciimusiccom

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  foo_input_asciimusiccom.vcxproj  foo_musiccom.vcxproj
C/Users/mk_82/AppData/Local/Temp/musiccom-cop26-build/: CMakeCache.txt
docs/: binary-analysis.md
include/musiccom/: mml.hpp  player.hpp
src/: foobar_input.cpp  mml.cpp  player.cpp
tests/: test_mml.cpp
tools/: analyze_musiccom.py  build.ps1  package.ps1  release.ps1  render.cpp
